Oauth/src/main/kotlin/com/example/oauth/global/error/ErrorProperty.kt
package com.example.oauth.global.error

interface ErrorProperty{
    val status: Int
    val message: String
}